# RestaurantFlow

./: .dockerignore  .env prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pydantic.ipynb  pyproject.toml
services/ms_auth/: .env.example  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
services/ms_auth/src/: config.py  main.py
services/ms_auth/src/api/: auth.py  dependencies.py  routers.py  users.py
services/ms_auth/src/db/: db.py
services/ms_auth/src/migrations/: env.py
services/ms_auth/src/migrations/versions/: 64b79afbc9f7_.py  8dd1e8c1b20d_.py  caeffe88e081_init.py
services/ms_auth/src/models/: users.py
services/ms_auth/src/repositories/: users.py
services/ms_auth/src/schemas/: auth.py  users.py
services/ms_auth/src/services/: auth.py  users.py
services/ms_auth/src/utils/: repository.py  unitofwork.py
services/ms_menu/: Dockerfile  docker-compose.yml  init_s3.py  pyproject.toml
services/ms_menu copy/: Dockerfile  docker-compose.yml  pyproject.toml
services/ms_menu copy/src/: ddd.md
services/ms_menu/minio_data/.minio.sys/: format.json
services/ms_menu/src/: alembic.ini  config.py  main.py  worker.py
services/ms_menu/src/api/: categories.py  combos.py  dependencies.py  dishes.py  dto.py  routers.py  tags.py
services/ms_menu/src/db/: database.py  db.py
services/ms_menu/src/migrations/: env.py
services/ms_menu/src/migrations/versions/: 1c247a06d588_new_column_image_url_for_dish.py  4b7a9bcfbca9_add_dishes_table.py  6910e1c05d23_init.py  8a37254d0997_new_column_is_available.py  9308a2c41700_category_id_is_no_nullable.py  95269f7c7e4b_.py  e411bc43f2be_init.py
services/ms_menu/src/models/: __init__.py  base.py  categories.py  category.py  combo.py  dish.py  dishes.py  processed_message.py  tag.py
services/ms_menu/src/repositories/: categories.py  combo.py  dishes.py  tag.py
services/ms_menu/src/schemas/: categories.py  combo.py  dishes.py  menu.json  menu.py  tag.py
services/ms_menu/src/services/: auth.py  categories.py  combo.py  dishes.py  sync_menu.py  tag.py
services/ms_menu/src/utils/: cache_decorator.py  consumer.py  fake.py  minio.py  rabbitmq.py  redis.py  repository.py  unitofwork.py
services/ms_order/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  structure.md
services/ms_order/src/: alembic.ini  config.py  logging.py  main.py  worker.py
services/ms_order/src/application/: README.md
services/ms_order/src/application/dto/: cart.py  menu.py  orders.py
services/ms_order/src/application/dtos/: cart.py  order.py  sync.py
services/ms_order/src/application/handlers/: sync_menu.py
services/ms_order/src/application/use_cases/: add_item.py  add_item_to_cart.py  create_order.py  menu_sync.py  sync_menu.py
services/ms_order/src/application/use_cases/cart/: add_item.py  get_cart.py
services/ms_order/src/application/use_cases/menu/: menu_sync.py  sync_menu.py
services/ms_order/src/application/use_cases/order/: create_order.py  order.py  update_status.py
services/ms_order/src/core/tests/: conftest.py  test_cart.py
services/ms_order/src/core/tests2/: conftest.py  test_cart.py
services/ms_order/src/domain/: README.md
services/ms_order/src/domain/aggregates/: cart.py  item.py  order.py
services/ms_order/src/domain/entities/: cart_item.py  menu_item.py  order_item.py
services/ms_order/src/domain/exceptions/: base.py  cart.py  menu.py  payment.py
services/ms_order/src/domain/interfaces/: cart_repository.py  menu_repository.py  order_repository.py  payment_client.py  repositories.py  uow.py
services/ms_order/src/domain/value_objects/: price.py
services/ms_order/src/infrastructure/: README.md
services/ms_order/src/infrastructure/database/: base.py  database.py  session.py
services/ms_order/src/infrastructure/database/migrations/: env.py
services/ms_order/src/infrastructure/database/models/: item.py  menu_item.py  order.py
services/ms_order/src/infrastructure/dependencies/: database.py  postgres.py  redis.py
services/ms_order/src/infrastructure/message_broker/: consumer.py
services/ms_order/src/infrastructure/rabbitmq/: consumer.py
services/ms_order/src/infrastructure/redis/: connection.py
services/ms_order/src/infrastructure/repositories/: cart_repository.py  item_repository.py  item_synchronizer.py  menu_item_repository.py  menu_repository.py  order_repository.py
services/ms_order/src/infrastructure/services/: item_synchronizer.py
services/ms_order/src/infrastructure/slowapi/: rate_limit.py
services/ms_order/src/infrastructure/uow/: sqlalchemy_uow.py
services/ms_order/src/infrastructure/yookassa/: client.py
services/ms_order/src/presentation/: README.md  dependencies.py
services/ms_order/src/presentation/amqp/: handlers.py  menu_sync_handler.py  payment_status_handler.py
services/ms_order/src/presentation/api/: dependencies.py  orders.py  router.py  routers.py
services/ms_order/src/presentation/api/dtos/: cart.py  order.py
services/ms_order/src/presentation/api/v1/: cart.py  order.py
services/ms_payment/: Dockerfile  pyproject.toml
services/ms_payment/src/: main.py  payments.py
services/ms_payment/src/application/interfaces/: message_broker.py
services/ms_payment/src/application/usecases/: create_payment.py  process_webhook.py
services/ms_payment/src/core/: config.py  logging.py
services/ms_payment/src/domain/: entities.py
services/ms_payment/src/domain/interfaces/: payment_gateway.py  transaction_repository.py
services/ms_payment/src/infrastructure/aiohttp/: setup.py
services/ms_payment/src/infrastructure/rabbitmq/: publisher.py  setup.py
services/ms_payment/src/infrastructure/redis/: setup.py
services/ms_payment/src/infrastructure/yookassa/: client.py  gateway.py  schemas.py
services/ms_payment/src/presentation/: dependencies.py
services/ms_payment/src/presentation/api/schemas/: payments.py
services/ms_payment/src/presentation/api/v1/: payments.py  webhooks.py
src/: config.py  (+7 more)
(+44 files in other folders)
