[project]
name = "restaurantflow-root"
version = "0.1.0"
description = "Root project for linters and global tools"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
]

[tool.black]
line-length = 88
target-version = ['py311']
force-exclude = '''
/(
    services/ms_auth/src/migrations/*
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = []

[tool.flake8]
max-line-length = 88
exclude = [".venv", "services/ms_auth/src/migrations/*"]
extend-ignore = ["E203", "E501", "W503", "W504", "F405", "F403", "F401"]