[project]
name = "ms-menu"
version = "0.1.0"
description = ""
authors = [
    {name = "khmtdnv",email = "marvelous.rust@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4"

dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aio-pika (>=9.6.1,<10.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
