[project]
name = "ms-order"
version = "0.1.0"
description = ""
authors = [
    {name = "khmtdnv"}
]

readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aio-pika (>=9.6.1,<10.0.0)",
    "redis (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "uvicorn (>=0.41.0,<0.42.0)"
]
prod = [
    "gunicorn (>=25.1.0,<26.0.0)"
]
