[project]
name = "ms-payment"
version = "0.1.0"
description = ""
authors = [
    {name = "khmtdnv",email = "marvelous.rust@yandex.ru"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "aiohttp (>=3.13.4,<4.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "yookassa (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false