[project]
name = "ms-payment"
version = "0.1.0"
description = ""
authors = [
    {name = "khmtdnv",email = "marvelous.rust@yandex.ru"}
]
readme = "README.md"

requires-python = ">=3.13,<4"
dependencies = [
    "aiohttp (>=3.13.4,<4.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "yookassa (>=3.10.0,<4.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "aio-pika (>=9.6.2,<10.0.0)"
]

[dependency-groups]
dev = [
    "uvicorn (>=0.41.0,<0.42.0)"
]
prod = [
    "gunicorn (>=25.1.0,<26.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false